:star2: Add Thumbnail & Origin url to the song model
