# packages/bumblebee-api/api-specs.yml
@@ -149,6 +149,9 @@ components:
       required:
         - name
         - length
+        - originUrl
+        - thumbnail
+        - url
       properties:
         name:
           type: string
@@ -156,6 +159,10 @@ components:
         length:
           type: integer
           format: int64
+        originUrl:
+          type: string
+        thumbnail:
+          type: string
         url:
           type: string
     Playlist:
@@ -166,6 +173,7 @@ components:
         - length
         - songs
         - url
+        - thumbnail
       properties:
         id:
           type: integer
@@ -174,6 +182,8 @@ components:
           type: string
           maxLength: 256
         url:
+          type: string
+        thumbnail:
           type: string
         provider:
           type: string
@@ -202,6 +212,8 @@ components:
             - youtube
             - spotify
         url:
+          type: string
+        name:
           type: string
     Error:
       required:
